--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
             position: relative;
             overflow: hidden;
             text-align: center;
-            height: 400px;
+            height: 470px;
         }
         .hero-section::after {
             content: '';
@@ -241,13 +241,13 @@
     <section id="home" class="hero-section">
         <div class="hero-slideshow">
             <div class="hero-slide">
-                <img src="https://via.placeholder.com/1920x1080?text=Halqatu+Ibadurrahman" alt="Halqatu Ibadurrahman">
+                <img src="./assets/images/logo.png" alt="Halqatu Ibadurrahman">
             </div>
             <div class="hero-slide">
-                <img src="https://via.placeholder.com/1920x1080?text=Ibadurrahman+College" alt="Ibadurrahman College">
+                <img src="./assets/images/hero1.jfif" alt="Ibadurrahman College">
             </div>
             <div class="hero-slide">
-                <img src="https://via.placeholder.com/1920x1080?text=Holistic+Education" alt="Holistic Education">
+                <img src="./assets/images/logo.png" alt="Holistic Education">
             </div>
         </div>
         <div class="hero-content">
