--- a/public/index.html
+++ b/public/index.html
@@ -298,8 +298,9 @@
             <div class="row mt-5 justify-content-center fade-up">
                 <div class="col-md-6 text-center">
                     <div class="card p-4 shadow-sm">
-                        <img src="images/director.jpg" alt="Director's Photo" class="img-fluid rounded-circle mb-3 mx-auto d-block" style="width: 150px; height: 150px; object-fit: cover;">
-                        <h4 class="card-title">Director's Message</h4>
+                        <img src="./assets/images/about6.jpeg" alt="Director's Photo" class="img-fluid rounded-circle mb-3 mx-auto d-block" style="width: 150px; height: 150px; object-fit: cover;">
+                        <h4 class="card-title">Sadiku Muhammad Ahmad</h4>
+                        <h5 class="card-text">Director</h5>
                         <p class="card-text text-muted">"At Halqatu Ibadurrahman and Ibadurrahman College, we are committed to fostering academic excellence and spiritual growth, preparing students to lead with integrity and wisdom."</p>
                     </div>
                 </div>
