--- a/public/index.html
+++ b/public/index.html
@@ -254,7 +254,7 @@
                 <img src="./assets/images/logo.png" alt="Ibadurrahman College">
             </div>
             <div class="hero-slide">
-                <img src="./assets/images/image1.png" alt="Holistic Education">
+                <img src="./assets/images/image1.jpeg" alt="Holistic Education">
             </div>
         </div>
         <div class="hero-content">
@@ -336,7 +336,7 @@
         <h4 class="mb-4">📸 Pictures</h4>
         <div class="row g-4">
             <div class="col-6 col-md-4">
-                <img src="./assets/images/image5.jpg" alt="Gallery " class="img-fluid rounded shadow-sm gallery-item">
+                <img src="./assets/images/image5.jpeg" alt="Gallery " class="img-fluid rounded shadow-sm gallery-item">
             </div>
             <div class="col-6 col-md-4">
                 <img src="./assets/images/image2.jpeg" alt="Gallery Image 2" class="img-fluid rounded shadow-sm gallery-item">
