--- a/public/index.html
+++ b/public/index.html
@@ -280,7 +280,7 @@
             
             <!-- Halqatu -->
             <div class="col-md-4">
-                <a href="http://www.hir.com.ng" class="card portal-card shadow-sm p-4 text-center h-100">
+                <a href="https://hir.onrender.com" class="card portal-card shadow-sm p-4 text-center h-100">
                     <h3 class="card-title fw-bold text-primary">Halqatu Ibadurrahman Litahfizul Qur'an</h3>
                     <p class="card-text text-muted">Tahfiz Portal</p>
                 </a>
